Finished work on HTML page

--- a/index.html
+++ b/index.html
@@ -5,4 +5,73 @@
       <title>Places I've lived (Joseph Park)</title>
    </head>
 
- 
+   <body>
+    <header>
+        <h1>Places I've lived</h1>
+    <nav>
+      <ul>
+          <li>
+              <a href="#seoul">Seoul, Korea</a>
+          </li>
+          <li>
+              <a href="#toledo">Toledo, Ohio</a>
+          </li>
+          <li>
+              <a href="#chicago">Chicago, Illinois</a>
+          </li>
+          <li>
+              <a href="#stlouis">Saint Louis, Missouri</a>
+          </li>
+      </ul>
+    </nav>
+    </header>
+    <main>
+        <article>
+            <section>
+                <a name="seoul"></a>
+                <h2>Seoul, Korea</h2>
+                <p>
+                    I was born in Seoul in 1960s. I am a pretty old man. <br>
+                    I spent my first 33 years there.<br> 
+                    I married the woman who has been called as an "angel". <br>
+                    The reason why she has been called in that way is that she has been so patient with me all the time.
+                </p>
+            </section>
+            <section>
+                <a name="toledo"></a>
+                <h2>Toledo, Ohio</h2>
+                <p>
+                    I never heard of Toledo before I had moved there.<br>
+                    The city was a bit old, but my three children enjoyed their lives there.<br>
+                    You know what? I did not know how cute my children were at that time....<br>
+                    It was because I was so busy due to my study and work.
+                </p>
+            </section>
+            <section>
+                <a name="chicago"></a>
+                <h2>Chicago, Illinois</h2>
+                <p>
+                    I did not lived there much time, but the impact that city gave me was so strong.<br>
+                    I like Chicago, still remembering its winter, snow, and winds. It was so cold....
+                </p>
+            </section>
+            <section>
+                <a name="stlouis"></a>
+                <h2>Saint Louis, Missouri</h2>
+                <p>
+                    Before coming to Saint Louis, the only thing I know was the weather is hot. But not that hot so far. <br>
+                    And guess what? <br>
+                    I has come to realize that now I am still full of energy enough to bear all the things especially when I challenge to do something...
+                </p>
+            </section>
+        </article>
+    </main>
+<footer>
+    <br>
+     <p>copyright 2020 Joseph Park</p>
+</footer>
+ </body>
+</html>
+
+
+
