--- a/index.html
+++ b/index.html
@@ -1,8 +1,10 @@
 <!DOCTYPE html>
 
 <html>
+
    <head>
       <title>Places I've lived (Joseph Park)</title>
+      <link rel="stylesheet" href="styles.css">
    </head>
 
    <body>
@@ -31,37 +33,49 @@
                 <a name="seoul"></a>
                 <h2>Seoul, Korea</h2>
                 <p>
-                    I was born in Seoul in 1960s. I am a pretty old man. <br>
+                    I was born in Seoul in 1960s. So I am a pretty old man. <br>
                     I spent my first 33 years there.<br> 
-                    I married the woman who has been called as an "angel". <br>
-                    The reason why she has been called in that way is that she has been so patient with me all the time.
+                    I met one woman a snowy day and have been married to her. Now she is named as an "angel". <br>
+                    The reason why she got that name? Because she became a Saint due to the fact that she has been with me. Now the question is "Who is a sinner?"<br>
+                    <br>
+                    Hint: Follow the logic. The variables could not be undefined or nulled!
+
                 </p>
             </section>
             <section>
                 <a name="toledo"></a>
                 <h2>Toledo, Ohio</h2>
                 <p>
-                    I never heard of Toledo before I had moved there.<br>
-                    The city was a bit old, but my three children enjoyed their lives there.<br>
-                    You know what? I did not know how cute my children were at that time....<br>
-                    It was because I was so busy due to my study and work.
+                    I never heard of Toledo before I had moved to there.<br>
+                    The city was a bit old, but my three children said they had enjoyed their school lives there.<br>
+                    You know what?<br>
+                    I did not know how cute my children were at that time....<br>
+                    It was because I was so busy and over-burdened...No time to be "true" Father...<br>
+                    <br>
+                    let input = "Stop making excuses. Live correctly"; <br>
+                    console.log(input); //...Am I right? <br>
+                    Answer: Yes, but some letters need to be stressed... go get TAs.
+
                 </p>
             </section>
             <section>
                 <a name="chicago"></a>
                 <h2>Chicago, Illinois</h2>
                 <p>
-                    I did not lived there much time, but the impact that city gave me was so strong.<br>
-                    I like Chicago, still remembering its winter, snow, and winds. It was so cold....
+                    I did not lived there for a long time, but the impacts that city gave me were so strong.<br>
+                    The huge city...like Seoul<br>
+                    Still remembering its winter, lots of snow, and fiercing winds. It was so cold....but the feeling of got freshed!
                 </p>
             </section>
             <section>
                 <a name="stlouis"></a>
                 <h2>Saint Louis, Missouri</h2>
                 <p>
-                    Before coming to Saint Louis, the only thing I know was the weather is hot. But not that hot so far. <br>
+                    Before coming to Saint Louis, the one thing I heard of was the summer weather is hot. But not that hot so far. <br>
                     And guess what? <br>
-                    I has come to realize that now I am still full of energy enough to bear all the things especially when I challenge to do something...
+                    I am knowing that I still have energy to challenge myself to do something...totally different thing...<br>
+                    <br>
+                    Tomorrow I will cover how to code...Good night, everyone!!!
                 </p>
             </section>
         </article>
