--- a/index.html
+++ b/index.html
@@ -36,10 +36,10 @@
                 <p>
                     I was born in Seoul in 1960s. So I am a pretty old man. <br>
                     I spent my first 33 years there.<br> 
-                    I met one woman a snowy day and have been married to her. Now she is named as an "angel". <br>
-                    The reason why she got that name? Because she became a Saint due to the fact that she has been with me. Now the question is "Who is guilty?"<br>
+                    I met one woman on a snowy day and was married to her. Now she is re-named as an "angel". <br>
+                    The reason why she got that name? Because she became an angel-Saint due to the fact that she has been with me all the time. Now the question is "Who is guilty?"<br>
                     <br>
-                    <b>Hint: Follow the logic. The main subject variables could not be undefined or nulled in this question!</b>
+                    <b>Hint: Follow the logical flow. The main subject variables could not be undefined or nulled in this question!</b>
 
                 </p>
             </section>
@@ -70,7 +70,7 @@
                     The huge city...like Seoul<br>
                     Still remembering its winter, lots of snow, and fiercing winds. It was so cold....but the feeling of got freshed!<br>
                     <br>
-                    <b>fetch(All Snows).throw(You name this)!</b>
+                    <b>fetch(allSnows).throw['softly'](youSetTarget)!</b>
                 </p>
             </section>
             <section>
@@ -82,7 +82,7 @@
                     And guess what? <br>
                     I am knowing that I still have energy to challenge myself to do something...totally different thing...<br>
                     <br>
-                    <b>Tomorrow I will cover how to code...Good night, everyone!!!</b>
+                    <b>Tomorrow I will cover how to code life...Good night, everyone!!!</b>
                 </p>
             </section>
         </article>
